[package]
name = "nature-of-code-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6" }
rand = "0.8.5"


[[example]]
name = "random-walker"
path = "examples/random-walker/random-walker.rs"
